# FrootsPi

./: README.md  operation.md  pins.sh
.github/workflows/: foxy.yaml  humble.yaml
docs/: architecture.md  quickstart.md
docs/modules/: frootspi_conductor.md  frootspi_examples.md  frootspi_hardware.md  frootspi_joycon.md  frootspi_kicker.md  frootspi_speaker.md  frootspi_wheel.md
frootspi_conductor/: CMakeLists.txt  package.xml
frootspi_conductor/include/frootspi_conductor/: conductor_component.hpp  visibility_control.h
frootspi_conductor/src/: conductor_component.cpp  main.cpp
frootspi_examples/: CMakeLists.txt  hardware_test.sh  package.xml
frootspi_examples/launch/: conductor.launch.py  hardware.launch.py  joycon.launch.py  robot.launch.py
frootspi_examples/systemd/: frootspi_netwatcher.service  frootspi_netwatcher.sh  pigpiod.service  register_systemd.sh  robot_launch.service  robot_launch.sh
frootspi_examples/utils/: discharge_all_robots.sh  shutdown.sh  shutdown_all_robots.sh  ssh-copy-id-for-all-robots.sh  update.sh  update_all_robot.sh
frootspi_hardware/: CMakeLists.txt  package.xml
frootspi_hardware/config/: gpio.yaml
frootspi_hardware/include/frootspi_hardware/: battery_monitor.hpp  capacitor_monitor.hpp  dribbler.hpp  driver_component.hpp  front_display_communicator.hpp  io_expander.hpp  kicker.hpp  lcd_driver.hpp  visibility_control.h  wheel_controller.hpp
frootspi_hardware/src/: battery_monitor.cpp  capacitor_monitor.cpp  dribbler.cpp  driver_component.cpp  front_display_communicator.cpp  hardware_driver.cpp  io_expander.cpp  kicker.cpp  lcd_driver.cpp  wheel_controller.cpp
frootspi_joycon/: CMakeLists.txt  package.xml
frootspi_joycon/config/: bsgp1204.yaml  dualshock3.yaml
frootspi_joycon/frootspi_joycon/: joycon.py
frootspi_joycon/include/frootspi_joycon/: joycon_component.hpp  visibility_control.h
frootspi_joycon/src/: joycon_component.cpp
frootspi_kicker/: CMakeLists.txt  package.xml
frootspi_kicker/include/frootspi_kicker/: frootspi_kicker_component.hpp  visibility_control.h
frootspi_kicker/src/: frootspi_kicker_component.cpp  main.cpp
frootspi_msgs/: CMakeLists.txt  package.xml
frootspi_msgs/msg/: BallDetection.msg  BatteryVoltage.msg  DribblePower.msg  FrootsPiCommand.msg  FrootsPiCommands.msg  KickCommand.msg  SwitchesState.msg  WheelVelocities.msg
frootspi_msgs/srv/: Kick.srv  SetKickerCharging.srv  SetLCDText.srv
frootspi_speaker/: CMakeLists.txt  package.xml
frootspi_speaker/frootspi_speaker/: speaker.py
frootspi_speaker/launch/: speaker.launch.py
frootspi_speaker/voices/: README.md  voice_file_list.csv
frootspi_wheel/: CMakeLists.txt  package.xml
frootspi_wheel/include/frootspi_wheel/: frootspi_wheel_component.hpp  visibility_control.h
frootspi_wheel/src/: frootspi_wheel_component.cpp  main.cpp
